@@ -1,3 +1,8 @@
+Tue Oct 17 10:38:49 2000  George Lebl <jirka@5z.com>
+
+	* penel.c, applet.c, basep-widget.c:  cleanup, recalc borders
+	  when a border panel is killed.
+
 Sat Oct 14 15:11:24 2000  George Lebl <jirka@5z.com>
 
 	* gnome-panel-properties.c, session.c, panel_config_global.h,
